# NeuralGraph

./: .gitignore  CMakeLists.txt  README.md  main.cpp
codegen/: CmakeLists.txt
front/: CMakeLists.txt
front/inc/: parser.hpp
front/src/: parser.cpp  visualization.cpp
inc/: graph.hpp  parser.hpp  visualization.hpp
src/: main.cpp  parser.cpp
